[package]
name = "epics-ca"
description = "epics-ca is a pure Rust implementation of the EPICS Channel Access Protocol"
authors = ["Todd Groff <groffta@ornl.gov>"]
version = "0.0.1"
edition = "2018"
license = "EPICS Open License"
license-file = "LICENSE.txt"

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"